--- a/src/Kira/Pages/CustomerWorkloads.razor
+++ b/src/Kira/Pages/CustomerWorkloads.razor
@@ -1,4 +1,4 @@
-﻿@page "/workloads"
+﻿@page "/customer-workloads"
 @using Kira.Extensions
 @using Kira.Infrastructure.Options
 @using Microsoft.Extensions.Options
