--- a/src/Kira/MainLayout.razor
+++ b/src/Kira/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@using System.Reflection
+@using Kira.Infrastructure.Options
+@using Microsoft.Extensions.Options
 @inherits LayoutComponentBase
 <RadzenDialog/>
 <RadzenNotification/>
@@ -31,8 +33,14 @@
             <RadzenText Text="Kira" TextStyle="TextStyle.Subtitle1" class="rz-mb-0" style="color: var(--rz-sidebar-color);"/>
         </RadzenStack>
         <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Home" Path=""/>
-            <RadzenPanelMenuItem Text="Workloads" Path="workloads"/>
+            <RadzenPanelMenuItem Text="Home" Path="" Icon="home"/>
+            <RadzenPanelMenuItem Text="Workloads" Icon="dashboard">
+                @foreach (var company in companies)
+                {
+                    <RadzenPanelMenuItem Text=@company.Value.Name Path=@($"companies/{company.Key.ToLowerInvariant()}")/>
+                }
+            </RadzenPanelMenuItem>
+            <RadzenPanelMenuItem Text="Rosetta" Path="rosetta"/>
         </RadzenPanelMenu>
         <RadzenStack AlignItems="AlignItems.Center" Gap="0" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding);">
             <RadzenText Text=@($"Product Data Manager v{Assembly.GetExecutingAssembly().GetName().Version}") TextStyle="TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="TagName.P" TextAlign="TextAlign.Center"/>
@@ -43,10 +51,11 @@
 
 @code
 {
-    private bool sidebarExpanded = true;
+    [Inject] IOptions<CompaniesOptions> CompaniesOptions { get; set; } = null!;
 
-    void SidebarToggleClick()
-    {
-        sidebarExpanded = !sidebarExpanded;
-    }
+    Dictionary<string, IdentityOptions> companies = new();
+    protected override void OnInitialized() => companies = CompaniesOptions.Value.Companies;
+
+    bool sidebarExpanded = true;
+    void SidebarToggleClick() => sidebarExpanded = !sidebarExpanded;
 }
